# details_shop_me

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
details_shop_me/: asgi.py  settings.py  urls.py  wsgi.py
details_shop_me/apps/cart/: apps.py  cart.py  models.py  test_cart.py  urls.py  views.py
details_shop_me/apps/cart/templates/cart/: cart.html
details_shop_me/apps/detailapp/: admin.py  apps.py  forms.py  models.py  permissions.py  serializers.py  tests.py  urls.py  utils.py  views.py
details_shop_me/apps/detailapp/migrations/: 0001_initial.py  0002_alter_category_options_alter_details_options_and_more.py  0003_details_price.py
details_shop_me/apps/detailapp/static/detailapp/css/: style.css
details_shop_me/apps/detailapp/templates/pages/: base.html  cart.html  catalog.html  contacts.html  detail-info.html  index.html  info.html  login.html  register.html
tests/: tests.py
