[tool.poetry]
name = "details_shop_me"
version = "0.1.0"
description = ""
authors = ["givinity <SaZh.user@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2"
psycopg = "^3.1.8"
Pillow = "^9.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
